tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ap-south-1/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-d4747cbc"
                }
            ],
            "InternetGatewayId": "igw-c53fe5ad",
            "OwnerId": "167389268608",
            "Tags": []
        }
    ]
}
