tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ap-south-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-7995cb12",
                    "RouteTableId": "rtb-3228e659"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-3228e659",
            "Routes": [
                {
                    "DestinationCidrBlock": "6.168.104.159/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.227.123.61/0",
                    "GatewayId": "igw-c53fe5ad",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-d4747cbc"
        }
    ]
}
